--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 #Site Setting
-BASE_URL=https://howz.dev
+BASE_URL=https://NawafNaifBahlas.vercel.com/
 
 # Notion Settings
-NOTION_API_KEY=
-SETTING_DATABASE_ID=
-NAVIGATION_DATABASE_ID=
-POST_DATABASE_ID=
+NOTION_API_KEY=secret_FoIuDhXoyBJNuj91hEJkZEDiQ0uVhPDSI54YnRLpn3e
+SETTING_DATABASE_ID=927f923a861f4f69a345330631b2bf07
+NAVIGATION_DATABASE_ID=a988bd2d78fe42d689ad45c0f6937633
+POST_DATABASE_ID=14ce85e3fe7a43edb5061cc45f8976a2
 
 #Giscus.app Setting
 GISCUS_REPO=
